normandie dashboard 70% done

--- a/src/prioreno/templates/base.html
+++ b/src/prioreno/templates/base.html
@@ -176,11 +176,13 @@
         <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
 
         <!-- Page level custom scripts -->
+        <script src="static/js/charts_normandie.js"></script>
         <script src="static/js/charts_calvados.js"></script>
         <script src="static/js/charts_eure.js"></script>
         <script src="static/js/charts_manche.js"></script>
         <script src="static/js/charts_orne.js"></script>
         <script src="static/js/charts_seine_maritime.js"></script>
+        <script src="static/js/download_normandie.js"></script>
         <script src="static/js/download_calvados.js"></script>
         <script src="static/js/download_eure.js"></script>
         <script src="static/js/download_manche.js"></script>
