--- a/src/prioreno/templates/orne.html
+++ b/src/prioreno/templates/orne.html
@@ -6,7 +6,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h2 mb-0 text-dark">orne</h1>
+                        <h1 class="h2 mb-0 text-dark">Orne</h1>
                     </div>
 
 
