--- a/src/prioreno/templates/base.html
+++ b/src/prioreno/templates/base.html
@@ -89,7 +89,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('prioreno.table') }}">
+                <a class="nav-link" href="{{ url_for('prioreno.carte') }}">
                     <i class="fas fa-fw fa-map-marker"></i>
                     <span>Carte</span></a>
             </li>
@@ -197,6 +197,7 @@
 
         <!-- Page level custom scripts -->
         <script src="static/js/datatables.js"></script>
+        <script src="static/js/carte.js"></script>
 
         <!-- Page level custom scripts -->
         <script src="static/js/charts_normandie.js"></script>
