--- a/src/prioreno/templates/tables.html
+++ b/src/prioreno/templates/tables.html
@@ -3,7 +3,10 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <h1 class="mb-4">Données par commune</h1>
+                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                        <h1 class="h2 mb-0 text-dark">Données par commune</h1>
+                    </div>
+
                     <form name="filterForm" method="POST" id="filterFormId">
                         <div class="row">
                             <div class="col-md-4">
