add logo to navigator tab

--- a/src/prioreno/templates/base.html
+++ b/src/prioreno/templates/base.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    
     <title>prioreno</title>
+    <link rel="icon" href="static/img/prioreno.ico" sizes="64x64" type="image/x-icon">
 
     <!-- Custom fonts for this template-->
     <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
